Primera versión del Home, con carousel

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,44 @@
-<p>footer works!</p>
+<footer>
+    
+    <div class="row d-flex flex-row contenedor-footer w-100">
+
+        <div class="col-4 mt-5 text-center">
+
+            <h2 class="titulo-potaje my-0 py-0">DULCE POTAJE</h2>
+            <p class="subtitulo-potaje fw-bold my-0 py-0">P O S T R E S &nbsp; D E &nbsp; O T R O &nbsp; M U N D O</p>
+
+            <p class="textos my-5">Postres saludables, naturales y artesanales</p>
+            
+
+            <p class="textos">Sin azúcar, sin huevo, sin lácteos...</p>
+            <p class="textos">¡Sin culpas!</p>
+
+        </div>
+
+        <div class="col-4 mt-5 text-center">
+            <h3 class="horarios">HORARIOS</h3>
+            <p class="textos fw-bold pt-4">LUNES - SÁBADO</p>
+            <p class="textos">8:00 AM - 6:00 PM</p>
+
+            <p class="textos fw-bold">DOMINGOS - FESTIVOS</p>
+            <p class="textos">8:00 AM - 2:00 PM</p>
+        </div>
+
+        <div class="col-4 mt-5 d-flex flex-column text-center">
+            <h3 class="redes">REDES</h3>
+            <div class="mx-auto">
+                <ul class="lista-footer text-start mt-4">
+                    <li><a routerLink=""><i class="fab fa-whatsapp fa-lg me-2"></i>WHATSAPP</a></li>
+                    <li><a routerLink="portfolio"><i class="far fa-paper-plane fa-lg me-2"></i>TELEGRAM</a></li>
+                    <li><a routerLink="profile"><i class="fab fa-facebook-square fa-lg me-2"></i>FACEBOOK</a></li>
+                    <li><a routerLink="profile"><i class="fab fa-instagram fa-lg me-2"></i>INSTAGRAM</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="w-100 text-center">
+        <p class="copy pb-3 fw-bold">C&nbsp;O&nbsp;P&nbsp;Y&nbsp;R&nbsp;I&nbsp;G&nbsp;H&nbsp;T&nbsp; © 2&nbsp;0&nbsp;2&nbsp;1 - D&nbsp;A&nbsp;N&nbsp;I&nbsp;E&nbsp;L&nbsp; C&nbsp;O&nbsp;R&nbsp;T&nbsp;É&nbsp;S</p>
+    </div>
+</footer>
