--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,49 @@
-<p>home works!</p>
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4">Cajas de Potajes</h2>
+    <p class="parrafos ms-4 mt-2">¿Estás buscando un regalo diferente para una ocasión especial?</p>
+    <p class="parrafos ms-4 mt-2">Contáctanos para más información</p>
+</div>
+
+<div class="row">
+    <div id="carouselExampleDark" class="col-10 mx-auto carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+                <img src="assets/img/11.png" class="d-block w-50 mx-auto" alt="...">
+            </div>
+    
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="assets/img/12.png" class="d-block w-50 mx-auto" alt="...">
+            </div>
+    
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
+
+
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mt-2 mb-4">Pet Store</h2>
+    
+    <p class="parrafos ms-4 mt-2">
+        En <span class="dulce-span fw-bold text-center">DULCE POTAJE</span> nos preocupamos por el medio ambiente. Es por
+        eso que hemos
+        formado una alianza con nuestros amigos de <span class="fw-bold">NINO MININO PET STORE</span> para poder
+        ofrecerte una opción ecológica en productos para tu mascota desde nuestra página.
+    </p>
+</div>
+
+<img src="assets/img/nino_minino.png" class="d-block mx-auto mb-5">
