--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,83 @@
-<p>navbar works!</p>
+<div class="mt-2 mb-5 row d-flex flex-row align-items-center w-100">
+
+    <div class="d-hidden d-xl-block col-2">
+        <img class="dp-logo img-fluid" src="assets/img/logo.png">
+    </div>
+    
+    <nav class="col-10 col-xl-8 navbar navbar-expand-xl navbar-light">
+    
+        <div class="container-fluid bg-navbar d-flex">
+    
+            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+    
+                    <li class="nav-item dropdown">
+    
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Potajes
+                        </a>
+    
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+    
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Acerca de</a>
+                    </li>
+    
+    
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Pet Store</a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link text-start" href="">Contáctanos</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-start d-inline-block d-xl-none" href="">Mi cuenta</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-start d-inline-block d-xl-none" href="">Carrito</a>
+                    </li>
+    
+                </ul>
+    
+            </div>
+        </div>
+    </nav>
+
+    <div class="col-2 d-none d-xl-flex flex-row justify-content-evenly">
+
+        <div>
+            <!-- <i class="fas fa-user-check"></i> -->
+            <i class="fas fa-user-times no-login fa-3x img-fluid"></i>
+        </div>
+
+        <div>
+            <i class="fas fa-shopping-cart cart fa-3x img-fluid"></i>
+        </div>
+
+    </div>
+
+    
+</div>
