Terminados: Home, Acerca de, Contáctanos y Página Error. Adelantos en los otros componentes

--- a/src/app/components/acercade/acercade.component.html
+++ b/src/app/components/acercade/acercade.component.html
@@ -1,1 +1,42 @@
-<p>acercade works!</p>
+<div class="mx-auto row d-flex flex-row justify-content-center align-items-center">
+
+    <div class="col-xl-8 col-lg-10 d-flex flex-column ms-5 px-5">
+        <h2 class="titulos ms-4 mt-5 mb-5">Historia</h2>
+    
+        <p class="parrafos ms-4 mt-2">
+            Mi nombre es Paula González, y soy la persona detrás de este bonito emprendimiento que nace
+            a raíz de las circunstancias que todos hemos vivido desde hace más de un año debido a la pandemia.
+        </p>
+
+        <p class="parrafos ms-4 mt-5">
+            Empezar con <span class="dulce-span fw-bold">Dulce Potaje</span> no ha sido fácil. Desde el principio tuve muchas ideas muy diferentes de qué
+            podría ofrecer e incluso hubo pequeños accidentes en la cocina que casi hacen que me rinda. Me sentí
+            impotente al no saber qué hacer. Entonces recordé que hace unos años había empezado a consultar recetas
+            de comida saludable para cuidar mi salud y me pregunté, ¿por qué no compartir estas opciones con personas
+            que al igual que yo, quieren implementar alimentos saludables y naturales a su dieta?.
+        </p> 
+    
+        <p class="parrafos ms-4 mt-5">
+            Experimenté con varias recetas, unas funcionaron y otras no, ¡pero esta vez no hubo accidentes!. Entonces
+            quise además ser consecuente con una causa que es muy importante para mí, <span class="fw-bold">el cuidado del medio ambiente</span>;
+            es por eso que dentro de los productos de <span class="dulce-span fw-bold">Dulce Potaje</span> no encontrarán plástico.
+        </p>
+
+        <p class="parrafos ms-4 mt-5">
+            Quienes me conocen saben que soy una persona muy minuciosa y detallista, por eso a cada uno de los productos
+            que me piden le pongo todo el amor y dedicación que se merecen.
+        </p>
+
+        <p class="parrafos ms-4 mt-5 mb-5">
+            Llevo muy poco tiempo con mi emprendimiento, pero estoy muy feliz y orgullosa de lo que he logrado hasta ahora. 
+            Agradezco todo el apoyo de las personas que han sido testigos de este proceso desde el principio y a quienes se 
+            han convertido en clientes fieles.
+        </p>
+
+    </div>
+    
+    <div class="col-xl-3 col-lg-12">
+        <img src="assets/img/acercade.png" alt="Paula González, creadora de Dulce Potaje" class="d-block">
+    </div>
+</div>
+
