--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
             <h2 class="titulo-potaje my-0 py-0">DULCE POTAJE</h2>
             <p class="subtitulo-potaje fw-bold my-0 py-0">P O S T R E S &nbsp; D E &nbsp; O T R O &nbsp; M U N D O</p>
 
-            <p class="textos my-5">Postres saludables, naturales y artesanales</p>
+            <p class="textos my-5">Postres y snacks saludables, naturales y artesanales</p>
             
 
             <p class="textos">Sin azúcar, sin huevo, sin lácteos...</p>
@@ -28,10 +28,10 @@
             <h3 class="redes">REDES</h3>
             <div class="mx-auto">
                 <ul class="lista-footer text-start mt-4">
-                    <li><a routerLink=""><i class="fab fa-whatsapp fa-lg me-2"></i>WHATSAPP</a></li>
-                    <li><a routerLink="portfolio"><i class="far fa-paper-plane fa-lg me-2"></i>TELEGRAM</a></li>
-                    <li><a routerLink="profile"><i class="fab fa-facebook-square fa-lg me-2"></i>FACEBOOK</a></li>
-                    <li><a routerLink="profile"><i class="fab fa-instagram fa-lg me-2"></i>INSTAGRAM</a></li>
+                    <li><a href="https://wa.me/573195490209" target="_blank"><i class="fab fa-whatsapp fa-lg me-2"></i>WHATSAPP</a></li>
+                    <li><a href="https://t.me/DulcePotaje" target="_blank"><i class="far fa-paper-plane fa-lg me-2"></i>TELEGRAM</a></li>
+                    <li><a href="https://www.instagram.com/dulcepotaje" target="_blank"><i class="fab fa-instagram fa-lg me-2"></i>INSTAGRAM</a></li>
+                    <li><a href="https://www.facebook.com/DulcePotaje" target="_blank"><i class="fab fa-facebook-square fa-lg me-2"></i>FACEBOOK</a></li>
                 </ul>
             </div>
         </div>
