--- a/src/app/components/noencontrado/noencontrado.component.html
+++ b/src/app/components/noencontrado/noencontrado.component.html
@@ -1,1 +1,9 @@
-<p>noencontrado works!</p>
+<div class="d-flex flex-column mb-5">
+    <img src="assets/img/error.png" class="d-block mx-auto img-fluid">
+
+    <div class="contenedor-error w-50 mx-auto mt-5">
+        <h2 class="ups text-center fw-bold">¡UPS!</h2>
+        <p class="parrafo text-center">Parece que la página que estás buscando no existe en este mundo</p>
+    </div>
+
+</div>
