--- a/src/app/components/petstore/petstore.component.html
+++ b/src/app/components/petstore/petstore.component.html
@@ -1,1 +1,59 @@
-<p>petstore works!</p>
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4">Nino Minino Pet Store</h2>
+    <p class="parrafos ms-4 mt-2">
+        Nino es un lindo gatito que decidió crear este emprendimiento que nace con el fin de ofrecer 
+        opciones ecológicas a uno de los productos más usados por los peluditos de la casa , <span class="fw-bold">las bolsas</span> para recoger nuestros residuos.
+    </p>
+</div>
+
+<div class="row">
+    <div id="carouselExampleDark" class="col-10 mx-auto carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+                <img src="assets/img/nino1.png" class="d-block w-50 mx-auto" alt="...">
+            </div>
+    
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="assets/img/nino2.png" class="d-block w-50 mx-auto" alt="...">
+            </div>
+
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="assets/img/nino3.png" class="d-block w-50 mx-auto" alt="...">
+            </div>
+
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="assets/img/nino4.png" class="d-block w-50 mx-auto" alt="...">
+            </div>
+    
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
+
+
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mt-2 mb-4">Productos</h2>
+    <h3 class="subtitulos ms-4 mt-2 mb-4">Bolsas</h3>
+    <h3 class="subtitulos ms-4 mt-2 mb-4">Arena Sanitaria</h3>
+</div>
+
+<img src="assets/img/nino_minino.png" class="d-block mx-auto mb-5">
+
+<!-- <i class="fas fa-plus"></i>
+<i class="fas fa-minus"></i> -->
