--- a/src/app/components/potajes/potajes.component.html
+++ b/src/app/components/potajes/potajes.component.html
@@ -1,1 +1,24 @@
-<p>potajes works!</p>
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4" id="galletas">Galletas</h2>
+</div>
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mt-2 mb-4" id="bocaditos">Bocaditos</h2>
+</div>
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4" id="granolas">Granolas y barras</h2>
+</div>
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4" id="untables">Untables</h2>
+</div>
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4" id="otros">Otros</h2>
+</div>
+
+
+<!-- <i class="fas fa-plus"></i>
+<i class="fas fa-minus"></i> -->
