--- a/src/app/components/potajes/potajes.component.html
+++ b/src/app/components/potajes/potajes.component.html
@@ -1,22 +1,44 @@
-
-<div class="divs-principales">
-    <h2 class="titulos ms-4 mb-4" id="galletas">Galletas</h2>
+<div class="d-flex justify-content-center align-items-center">
+    <button class="btn btn-secondary" (click)="scrollToElement(galletas)">Galletas</button>
+    <button class="btn btn-secondary" (click)="scrollToElement(bocaditos)">Bocaditos</button>
+    <button class="btn btn-secondary" (click)="scrollToElement(granolas)">Granolas</button>
+    <button class="btn btn-secondary" (click)="scrollToElement(untables)">Untables</button>
+    <button class="btn btn-secondary" (click)="scrollToElement(otros)">Otros</button>
 </div>
 
 <div class="divs-principales">
-    <h2 class="titulos ms-4 mt-2 mb-4" id="bocaditos">Bocaditos</h2>
+    <h2 class="titulos ms-4 mb-4" #galletas>Galletas</h2>
+    <p class="parrafos">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Quisquam placeat porro voluptas accusantium obcaecati. At nesciunt, voluptatem incidunt exercitationem temporibus molestias, id quas vitae quae debitis laudantium voluptas aperiam soluta facere omnis commodi mollitia, quis laboriosam adipisci magni. Adipisci voluptatem, rem ex sequi tenetur error corporis sunt officiis temporibus sed nisi ipsa est consectetur beatae nobis, voluptate similique sint quae veritatis architecto exercitationem fuga commodi? Rerum, dolore. Nobis tempora nihil sequi possimus esse dicta quia dolorum vel fugit ex. Minima, rem libero et odit quam qui id consequatur sed cum eius inventore deserunt fugit, commodi culpa praesentium. Nihil quibusdam praesentium maxime sint cumque. Deserunt, velit minus praesentium soluta debitis natus ipsa perferendis sed eaque illo odit deleniti totam aperiam perspiciatis cumque sequi necessitatibus enim maiores quasi facere aut. Perspiciatis, quas ullam? Harum ratione ex et tempora labore adipisci repudiandae nihil laboriosam. Ab explicabo odit nesciunt consequuntur tempora illo culpa voluptates quibusdam impedit, facere, quas vel doloribus accusamus alias vitae hic animi omnis, optio deleniti aliquam eius a illum officia! Nesciunt impedit dolores, possimus ipsa, sunt a cum ut vero explicabo, dolor velit dolorum? Sed eligendi nisi officiis atque ducimus iusto? Libero aliquid eveniet soluta natus dolores. Dicta doloremque laudantium quam!
+    </p>
 </div>
 
 <div class="divs-principales">
-    <h2 class="titulos ms-4 mb-4" id="granolas">Granolas y barras</h2>
+    <h2 class="titulos ms-4 mt-2 mb-4" #bocaditos>Bocaditos</h2>
+    <p class="parrafos">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Quisquam placeat porro voluptas accusantium obcaecati. At nesciunt, voluptatem incidunt exercitationem temporibus molestias, id quas vitae quae debitis laudantium voluptas aperiam soluta facere omnis commodi mollitia, quis laboriosam adipisci magni. Adipisci voluptatem, rem ex sequi tenetur error corporis sunt officiis temporibus sed nisi ipsa est consectetur beatae nobis, voluptate similique sint quae veritatis architecto exercitationem fuga commodi? Rerum, dolore. Nobis tempora nihil sequi possimus esse dicta quia dolorum vel fugit ex. Minima, rem libero et odit quam qui id consequatur sed cum eius inventore deserunt fugit, commodi culpa praesentium. Nihil quibusdam praesentium maxime sint cumque. Deserunt, velit minus praesentium soluta debitis natus ipsa perferendis sed eaque illo odit deleniti totam aperiam perspiciatis cumque sequi necessitatibus enim maiores quasi facere aut. Perspiciatis, quas ullam? Harum ratione ex et tempora labore adipisci repudiandae nihil laboriosam. Ab explicabo odit nesciunt consequuntur tempora illo culpa voluptates quibusdam impedit, facere, quas vel doloribus accusamus alias vitae hic animi omnis, optio deleniti aliquam eius a illum officia! Nesciunt impedit dolores, possimus ipsa, sunt a cum ut vero explicabo, dolor velit dolorum? Sed eligendi nisi officiis atque ducimus iusto? Libero aliquid eveniet soluta natus dolores. Dicta doloremque laudantium quam!
+    </p>
 </div>
 
 <div class="divs-principales">
-    <h2 class="titulos ms-4 mb-4" id="untables">Untables</h2>
+    <h2 class="titulos ms-4 mb-4" #granolas>Granolas y barras</h2>
+    <p class="parrafos">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Quisquam placeat porro voluptas accusantium obcaecati. At nesciunt, voluptatem incidunt exercitationem temporibus molestias, id quas vitae quae debitis laudantium voluptas aperiam soluta facere omnis commodi mollitia, quis laboriosam adipisci magni. Adipisci voluptatem, rem ex sequi tenetur error corporis sunt officiis temporibus sed nisi ipsa est consectetur beatae nobis, voluptate similique sint quae veritatis architecto exercitationem fuga commodi? Rerum, dolore. Nobis tempora nihil sequi possimus esse dicta quia dolorum vel fugit ex. Minima, rem libero et odit quam qui id consequatur sed cum eius inventore deserunt fugit, commodi culpa praesentium. Nihil quibusdam praesentium maxime sint cumque. Deserunt, velit minus praesentium soluta debitis natus ipsa perferendis sed eaque illo odit deleniti totam aperiam perspiciatis cumque sequi necessitatibus enim maiores quasi facere aut. Perspiciatis, quas ullam? Harum ratione ex et tempora labore adipisci repudiandae nihil laboriosam. Ab explicabo odit nesciunt consequuntur tempora illo culpa voluptates quibusdam impedit, facere, quas vel doloribus accusamus alias vitae hic animi omnis, optio deleniti aliquam eius a illum officia! Nesciunt impedit dolores, possimus ipsa, sunt a cum ut vero explicabo, dolor velit dolorum? Sed eligendi nisi officiis atque ducimus iusto? Libero aliquid eveniet soluta natus dolores. Dicta doloremque laudantium quam!
+    </p>
 </div>
 
 <div class="divs-principales">
-    <h2 class="titulos ms-4 mb-4" id="otros">Otros</h2>
+    <h2 class="titulos ms-4 mb-4" #untables>Untables</h2>
+    <p class="parrafos">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Quisquam placeat porro voluptas accusantium obcaecati. At nesciunt, voluptatem incidunt exercitationem temporibus molestias, id quas vitae quae debitis laudantium voluptas aperiam soluta facere omnis commodi mollitia, quis laboriosam adipisci magni. Adipisci voluptatem, rem ex sequi tenetur error corporis sunt officiis temporibus sed nisi ipsa est consectetur beatae nobis, voluptate similique sint quae veritatis architecto exercitationem fuga commodi? Rerum, dolore. Nobis tempora nihil sequi possimus esse dicta quia dolorum vel fugit ex. Minima, rem libero et odit quam qui id consequatur sed cum eius inventore deserunt fugit, commodi culpa praesentium. Nihil quibusdam praesentium maxime sint cumque. Deserunt, velit minus praesentium soluta debitis natus ipsa perferendis sed eaque illo odit deleniti totam aperiam perspiciatis cumque sequi necessitatibus enim maiores quasi facere aut. Perspiciatis, quas ullam? Harum ratione ex et tempora labore adipisci repudiandae nihil laboriosam. Ab explicabo odit nesciunt consequuntur tempora illo culpa voluptates quibusdam impedit, facere, quas vel doloribus accusamus alias vitae hic animi omnis, optio deleniti aliquam eius a illum officia! Nesciunt impedit dolores, possimus ipsa, sunt a cum ut vero explicabo, dolor velit dolorum? Sed eligendi nisi officiis atque ducimus iusto? Libero aliquid eveniet soluta natus dolores. Dicta doloremque laudantium quam!
+    </p>
+</div>
+
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4" #otros>Otros</h2>
+    <p class="parrafos">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Quisquam placeat porro voluptas accusantium obcaecati. At nesciunt, voluptatem incidunt exercitationem temporibus molestias, id quas vitae quae debitis laudantium voluptas aperiam soluta facere omnis commodi mollitia, quis laboriosam adipisci magni. Adipisci voluptatem, rem ex sequi tenetur error corporis sunt officiis temporibus sed nisi ipsa est consectetur beatae nobis, voluptate similique sint quae veritatis architecto exercitationem fuga commodi? Rerum, dolore. Nobis tempora nihil sequi possimus esse dicta quia dolorum vel fugit ex. Minima, rem libero et odit quam qui id consequatur sed cum eius inventore deserunt fugit, commodi culpa praesentium. Nihil quibusdam praesentium maxime sint cumque. Deserunt, velit minus praesentium soluta debitis natus ipsa perferendis sed eaque illo odit deleniti totam aperiam perspiciatis cumque sequi necessitatibus enim maiores quasi facere aut. Perspiciatis, quas ullam? Harum ratione ex et tempora labore adipisci repudiandae nihil laboriosam. Ab explicabo odit nesciunt consequuntur tempora illo culpa voluptates quibusdam impedit, facere, quas vel doloribus accusamus alias vitae hic animi omnis, optio deleniti aliquam eius a illum officia! Nesciunt impedit dolores, possimus ipsa, sunt a cum ut vero explicabo, dolor velit dolorum? Sed eligendi nisi officiis atque ducimus iusto? Libero aliquid eveniet soluta natus dolores. Dicta doloremque laudantium quam!
+    </p>
 </div>
 
 
