--- a/src/app/components/shopping/shopping.component.html
+++ b/src/app/components/shopping/shopping.component.html
@@ -1,1 +1,41 @@
-<p>shopping works!</p>
+<div class="divs-principales">
+    <h2 class="titulos ms-4 mb-4">Mi Carrito</h2>
+</div>
+
+<div class="row d-flex flex-row justify-content-center align-items-center">
+    <!-- Div donde aparecen los artículos -->
+    <div class="col-6 divs-principales">
+
+    </div>
+    
+    <!-- Div donde aparece la cuenta -->
+    <div class="col-3 contenedor-cuenta">
+
+        <h3 class="subtitulos mb-3 text-center">RESUMEN DE MI COMPRA</h3>
+
+        <div class="d-flex flex-row justify-content-between">
+            <p class="parrafos">Subtotal</p>
+            <p class="parrafos" id="sumaprecios">20000</p>
+        </div>
+
+        <div class="d-flex flex-row justify-content-between">
+            <p class="parrafos">Envío</p>
+            <p class="parrafos" id="envio">6000</p>
+        </div>
+
+        <div class="caja-total d-flex flex-row justify-content-between">
+            <h3 class="total-titulo my-3">TOTAL</h3>
+            <p class="parrafos my-3 fw-bold" id="total">6000</p>
+        </div>
+
+        <button type="button" class="btn btn-secondary fw-bold">PAGAR</button>
+    </div>
+
+</div>
+
+<div class="divs-principales mt-5 caja-aviso">
+    <h3 class="subtitulos ms-4">AVISO:</h3>
+    <p class="parrafos ms-4">Contamos con envío a Bogotá, Cajicá, Chía y Zipaquirá por un valor de $ 6.000.</p>
+    <p class="parrafos ms-4">El pedido llegará a su destino al siguiente día de ser realizado.</p>
+</div>
+
