--- a/src/app/components/crearcuenta/crearcuenta.component.html
+++ b/src/app/components/crearcuenta/crearcuenta.component.html
@@ -1,1 +1,47 @@
-<p>crearcuenta works!</p>
+<div class="row d-flex justify-content-center align-items-center mb-5 pb-5">
+
+    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-7 col-8 form-create mt-5">
+
+        <form [formGroup]="crearForm" (ngSubmit)="crearUsuario()">
+
+            <div class="mb-5">
+                <h1 class="text-center">CREA TU CUENTA</h1>
+            </div>
+
+            <div class="mb-5">
+                <label class="form-label">Nombre Completo</label>
+                <input type="text" class="form-control" formControlName="nombreCrear">
+                <span class="text-danger fw-bold span-font" *ngIf="crearForm.get('nombreCrear')?.hasError('required') && crearForm.get('nombreCrear')?.touched">Ingresa tu nombre completo.</span>               
+            </div>
+
+            <div class="mt-3 mb-5">
+                <label class="form-label">Correo Electrónico</label>
+                <input type="email" class="form-control" formControlName="correoCrear">
+                <span class="text-danger fw-bold span-font" *ngIf="crearForm.get('correoCrear')?.hasError('required') && crearForm.get('correoCrear')?.touched">Ingresa tu dirección de correo.</span>
+            
+            </div>
+
+            <div class="mt-3 mb-5">
+                <label class="form-label">Contraseña</label>
+                <input type="password" class="form-control" formControlName="contrasenaCrear">
+                <span class="text-danger fw-bold span-font" *ngIf="crearForm.get('contrasenaCrear')?.hasError('required') && crearForm.get('contrasenaCrear')?.touched">Debe tener al menos un número.</span>
+            
+            </div>
+
+            <div class="mt-3 mb-5">
+                <label class="form-label">Verifica tu contraseña</label>
+                <input type="password" class="form-control" formControlName="verificarcontraCrear">
+                <span class="text-danger fw-bold span-font" *ngIf="crearForm.get('verificarcontraCrear')?.hasError('required') && crearForm.get('verificarcontraCrear')?.touched">Las contraseñas no coinciden.</span>
+            
+            </div>
+            
+            <div class="d-flex flex-column text-center mt-5">
+                <button type="submit" class="btn btn-primary create-btn mb-4" [disabled]="crearForm.invalid">CREAR CUENTA</button>
+                <button type="button" class="btn btn-secondary create-btn" routerLink="">PÁGINA PRINCIPAL</button>
+            </div>
+
+        </form>       
+    </div>
+
+</div>
+
