--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,11 +14,11 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="assets/img/11.png" class="d-block w-50 mx-auto" alt="...">
+                <img src="assets/img/11.png" class="d-block w-50 mx-auto" alt="Caja de regalo 1">
             </div>
     
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/img/12.png" class="d-block w-50 mx-auto" alt="...">
+                <img src="assets/img/12.png" class="d-block w-50 mx-auto" alt="Caja de regalo 2">
             </div>
     
         </div>
