--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="row d-flex justify-content-center align-items-center mb-5 pb-5">
+
+    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-7 col-8 form-login">
+
+        <form [formGroup]="loginForm" (ngSubmit)="verificarLogin()">
+
+            <div class="mb-5">
+                <h1 class="text-center">MI CUENTA</h1>
+            </div>
+
+            <div class="mb-5">
+                <label class="form-label">Correo Electrónico</label>
+                <input type="email" class="form-control" formControlName="correoLogin">
+                <span class="text-danger fw-bold span-font" *ngIf="loginForm.get('correoLogin')?.hasError('required') && loginForm.get('correoLogin')?.touched">Ingrese su correo electrónico.</span>               
+            </div>
+
+            <div class="mt-3 mb-5">
+                <label class="form-label">Contraseña</label>
+                <input type="password" class="form-control" formControlName="contrasenaLogin">
+                <span class="text-danger fw-bold span-font" *ngIf="loginForm.get('contrasenaLogin')?.hasError('required') && loginForm.get('contrasenaLogin')?.touched">Ingrese su contraseña.</span>
+                <a href="#" class="forgot mt-5 fw-bold d-inline-block">¿Olvidaste tu contraseña?</a><br>
+                <a routerLink="/crear" class="forgot fw-bold d-inline-block">Crear una cuenta</a>
+            
+            </div>
+            
+            <button type="submit" class="btn btn-secondary" [disabled]="loginForm.invalid">ENTRAR</button>
+            
+        </form>       
+    </div>
+
+</div>
+
